Space gap caused by clear elements in IE7 in AdminOverview fixed (font-size and line-height set to zero).

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Agent.AdminIE7.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Agent.AdminIE7.css
@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.1 $
+ * @version     $Revision: 1.2 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  * @css-for     IE7
@@ -16,6 +16,11 @@
 
 .Admin .Size1of2 .AsBlock {
     background: url(../img/empty_background.png);
+}
+    
+.LayoutGrid > li.Clear {
+    font-size: 0;
+    line-height: 0;
 }
 
 } /* end @media */
